--- a/cola-archetype-web/cola-components/pom.xml
+++ b/cola-archetype-web/cola-components/pom.xml
@@ -16,6 +16,7 @@
         <module>cola-component-dto</module>
         <module>cola-component-exception</module>
         <module>cola-component-catchlog-starter</module>
+        <module>cola-components-security</module>
     </modules>
 
     <properties>
