--- a/cola-archetype-web/cola-components/cola-components-security-core/pom.xml
+++ b/cola-archetype-web/cola-components/cola-components-security-core/pom.xml
@@ -37,5 +37,9 @@
             <artifactId>tomcat-embed-core</artifactId>
             <version>9.0.45</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 </project>
