--- a/cola-archetype-web/start/pom.xml
+++ b/cola-archetype-web/start/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>cola-adapter</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.jhmarryme.cola</groupId>
+            <artifactId>cola-components-security-browser</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test</artifactId>
             <scope>test</scope>
