--- a/cola-archetype-web/start/pom.xml
+++ b/cola-archetype-web/start/pom.xml
@@ -17,11 +17,11 @@
             <groupId>com.jhmarryme.cola.web</groupId>
             <artifactId>cola-adapter</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.jhmarryme.cola</groupId>
-            <artifactId>cola-components-security-browser</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.jhmarryme.cola</groupId>-->
+<!--            <artifactId>cola-components-security-browser</artifactId>-->
+<!--            <version>1.0.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test</artifactId>
